<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="loading">Загрузка…</string>
    <string name="search">Поиск</string>
    <string name="news">Новости</string>
    <string name="wanna_help">Помочь</string>
    <string name="history">История</string>
    <string name="profile">Профиль</string>
    <string name="event_details">Детали события</string>
    <string name="your_lastname">Ваша фамилия</string>
    <string name="your_name">Ваше имя</string>
    <string name="receive_push_notifications">Получать push-уведомления</string>
    <string name="email_for_notifications">E-mail для уведомлений</string>
    <string name="email">E-mail</string>
    <string name="edit_text_hint_lastname">Введите фамилию</string>
    <string name="edit_text_hint_name">Введите имя</string>
    <string name="edit_text_hint_email">Введите e-mail</string>
    <string name="birthday">Дата рождения</string>
    <string name="circle_of_action">Сфера деятельности</string>
    <string name="your_friends">Ваши друзья</string>
    <string name="tv_circle_of_action">Хирургия, травмотология</string>
    <string name="tv_fulfill_circle_of_action">Заполните Вашу сферу деятельности,\nчтобы быть наиболее полезным</string>
    <string name="tv_password">Пароль</string>
    <string name="edit_text_hint_birthday">Введите дату рождения</string>
    <string name="toolbar_action_confirm">Принять</string>
    <string name="toolbar_action_edit">Редактировать</string>
    <string name="tv_title_edit_profile">Редактировать</string>
    <string name="btn_change_photo">Сменить\nфото</string>
    <string name="btn_logout">Выйти из аккаунта</string>
    <string name="tv_delete">Удалить</string>
    <string name="tv_make_photo">Сделать снимок</string>
    <string name="tv_choose_photo">Выбрать фото</string>
    <string name="tv_cat_kids">Дети</string>
    <string name="tv_cat_adults">Взрослые</string>
    <string name="tv_cat_aged">Пожилые</string>
    <string name="tv_cat_animals">Животные</string>
    <string name="tv_cat_events">Мероприятия</string>
    <string name="tv_title_choose_category">Выберите катеригорию помощи</string>
    <string name="search_view_input_organization_name">Введите название организации</string>
    <string name="have_some_questions">У вас есть вопросы?</string>
    <string name="write_us"><u>Напишите нам</u></string>
    <string name="go_to_organisation_site"><u>Перейти на сайт организации</u></string>
    <string name="filter">Фильтр</string>
    <string name="categories_of_help">Категории помощи</string>
    <string name="file_name_avatar">avatar.jpg</string>
    <string name="by_events">По мероприятиям</string>
    <string name="by_organization">По НКО</string>
    <string name="error_file_not_created">Ошибка создания файла</string>
    <string name="input_email">Введите e-mail</string>
    <string name="input_password">Введите пароль</string>
    <string name="enter">ВОЙТИ</string>
    <string name="forgotten_password"><u>Забыли пароль?</u></string>
    <string name="registration"><u>Регистрация</u></string>
    <string name="write_event_name_or_keywords">Напишите в строке поиска название \nмероприятия или ключевые слова.</string>
    <string name="search_tv_example">Например,</string>
    <string name="search_tv_master_class"><u>мастер-класс, помощь</u></string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>

    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
</resources>