<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clipToOutline="true"
    android:background="@drawable/dialog_layout_background"
    android:paddingHorizontal="@dimen/spacing_xl"
    android:paddingVertical="@dimen/spacing_xxl"
    tools:context=".profileEditScreen.ChangePhotoDialogFragment">

    <LinearLayout
        android:id="@+id/btn_choose_ptoho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/upload" />

        <TextView
            style="@style/TextStyle14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xl"
            android:text="@string/tv_choose_photo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_make_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/camera" />

        <TextView
            style="@style/TextStyle14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xl"
            android:text="@string/tv_make_photo" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/btn_delete_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete" />

        <TextView
            style="@style/TextStyle14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xl"
            android:text="@string/tv_delete" />

    </LinearLayout>

</LinearLayout>