<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_two">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_by_event_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/search_placeholder_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:constraint_referenced_ids="image_search_placeholder, search_tv_title, search_tv_example, search_tv_master" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_search_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:src="@drawable/icon_search_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_tv_title"
        style="@style/TextStyle10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/write_event_name_or_keywords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_search_placeholder" />

    <TextView
        android:id="@+id/search_tv_example"
        style="@style/TextStyle20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xxs"
        android:layout_marginTop="10dp"
        android:text="@string/search_tv_example"
        app:layout_constraintEnd_toStartOf="@id/search_tv_master"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_tv_title" />

    <TextView
        android:id="@+id/search_tv_master"
        style="@style/TextStyle7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xxs"
        android:text="@string/search_tv_master_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_tv_example"
        app:layout_constraintTop_toTopOf="@id/search_tv_example" />

</androidx.constraintlayout.widget.ConstraintLayout>

